force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/approle_id__c.field-meta.xml
<CustomField>
    <fullName>approle_id__c</fullName>
    <description>approle_id</description>
    <externalDeveloperName>approle_id</externalDeveloperName>
    <label>approle_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>