force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/appuser_id__c.field-meta.xml
<CustomField>
    <fullName>appuser_id__c</fullName>
    <description>appuser_id</description>
    <externalDeveloperName>appuser_id</externalDeveloperName>
    <label>appuser_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>