force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/appuser_name__c.field-meta.xml
<CustomField>
    <fullName>appuser_name__c</fullName>
    <description>appuser_name</description>
    <externalDeveloperName>appuser_name</externalDeveloperName>
    <label>appuser_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>