force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/employee_number__c.field-meta.xml
<CustomField>
    <fullName>employee_number__c</fullName>
    <description>employee_number</description>
    <externalDeveloperName>employee_number</externalDeveloperName>
    <label>employee_number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>