force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/first_name__c.field-meta.xml
<CustomField>
    <fullName>first_name__c</fullName>
    <description>first_name</description>
    <externalDeveloperName>first_name</externalDeveloperName>
    <label>first_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>