force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/last_name__c.field-meta.xml
<CustomField>
    <fullName>last_name__c</fullName>
    <description>last_name</description>
    <externalDeveloperName>last_name</externalDeveloperName>
    <label>last_name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>