force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/pin__c.field-meta.xml
<CustomField>
    <fullName>pin__c</fullName>
    <description>pin</description>
    <externalDeveloperName>pin</externalDeveloperName>
    <label>pin</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>