force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/profile_image_url__c.field-meta.xml
<CustomField>
    <fullName>profile_image_url__c</fullName>
    <description>profile_image_url</description>
    <externalDeveloperName>profile_image_url</externalDeveloperName>
    <label>profile_image_url</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>