force-app/main/default/objects/dw_ecard_archive_app_user__x/fields/user_type__c.field-meta.xml
<CustomField>
    <fullName>user_type__c</fullName>
    <description>user_type</description>
    <externalDeveloperName>user_type</externalDeveloperName>
    <label>user_type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>